--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
     <title>Base App</title>
   </head>
-  <body>
+  <body ng-app="baseApp" ng-controller="AppController" layout="column" ng-cloak flex>
+    <md-content>
+
+      <md-card layout="column">
+        <md-card-content>
+          <h1>{{title}}</h1>
+          <div ng-view>
+
+          </div>
+
+        </md-card-content>
+      </md-card>
+
+    </md-content>
+
+
+
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-animate/angular-animate.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-aria/angular-aria.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-messages/angular-messages.min.js"></script>
+
+    <script type="text/javascript" src="app/modules/welcome-module.js"></script>
+    <script type="text/javascript" src="app/app.js"></script>
 
   </body>
 </html>
